2006-11-14  Per Bothner  <per@bothner.com>

	* XMLParser.java: Make use of enhanced XMLFilter.
	(messages): Remove field.
	(filter): New field.
	(error): Defer error reporting to XMLFilter.
	(getColumnNumber): Subtract one to get just-read column.
	* MakeElement.java: Namespaces copying is now handled by XMLFilter.
	* Nodes.java: Must now filter XConsumer events using XMLFilter.
	* NodeConstructor.java (pushNodeConsumer, popNodeConsumer,
	pushNodeContext, popNodeContext, compileUsingNodeTree): Likewise.
	(makeName, finishNode): Convenience methods for compiled code.

	* SortedNodes.java (curFragment): Remove unused/bogus field.

2006-11-13  Per Bothner  <per@bothner.com>

	* XMLParser.java: Implement gnu.text.SourceLocation.

	* AttributeType.java (getImplementationType): Be more specific.
	* ElementType.java (getImplementationType): Likewise.
	* ProcessingInstructionType.java (getImplementationType): Likewise.

2006-11-09  Per Bothner  <per@bothner.com>

	* MakeAttribute.java: Update for Consumer changes.
	* MakeResponseHeader.java: Likewise.
	* HttpPrinter.java: Likewise.
	* MakeElement.java: Likewise.
	* Nodes.java: Likewise.

2006-11-08  Per Bothner  <per@bothner.com>

	* XMLParser.java: Update for ParsedXMLToConsumer -> XMLFilter rename.

2006-10-31  Per Bothner  <per@bothner.com>

	* XDataType.java (booleanType): Use Type.boolean_type.
	(emitCoerceToObject, emitTestIf): Need special handling for xs:boolean
	since it is a primitive type.

	* NodeType.java (documentNodeTest, textNodeTest, commentNodeTest,
	anyNodeTest): New static fields, moved to XQParser.
	* DescendantOrSelfAxis.java (anyNode): New static field.
	(<init>): New private constructor.
	(make): Return anyNode if appropriate.  Use new constructor.

2006-10-30  Per Bothner  <per@bothner.com>

	* KNode.java (base): New convenience method.

	* ElementType.java (anyElement): New static final field.

2006-10-29  Per Bothner  <per@bothner.com>

	* Notation.java: New class.